k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: win32-vnc-svc
  labels:
    app: win32-vnc-k8s
spec:
  type: ClusterIP
  selector:
    app: win32-vnc-k8s
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  - name: vnc
    protocol: TCP
    port: 6080
    targetPort: 6080
